feat: implement answer retrieval and timer management for attempts