@@ -1,6 +1,6 @@
-package com.simulacert.config.security.prod;
+package com.simulacert.security.dev;
 
-import com.simulacert.config.security.CorsConfigurationHelper;
+import com.simulacert.security.CorsConfigurationHelper;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -8,24 +8,19 @@ import org.springframework.context.annotation.Profile;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @Configuration
-@Profile("prod")
-public class CorsConfigProd {
+@Profile({"dev", "default"})
+public class CorsConfigDev {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        log.info("CORS Configuration for PROD environment");
+        log.info("CORS Configuration for DEV environment");
 
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(
-                Arrays.asList(
-                        "https://app.simulacert.com",
-                        "https://admin.simulacert.com"
-                )
-        );
+        configuration.setAllowedOriginPatterns(List.of("*"));
 
         return CorsConfigurationHelper.build(configuration);
     }
